[package]
name = "nucleo3"
version = "0.1.0"
edition = "2021"

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.stm32f0xx-hal]
features = ["stm32f042", "rt"]
version = "0.17.0"

[dev-dependencies]
embedded-graphics = "0.6.2"
epd-waveshare = "0.4.0"
ina260 = "0.3.1"
nb = "0.1.2"
numtoa = "0.2.3"
panic-halt = "0.2.0"
sevensegment = "0.2"
ssd1306 = "0.3.1"
display-interface = "0.4.0"
display-interface-spi = "0.4.0"

[dev-dependencies.shared-bus]
features = ["cortexm"]
optional = false
version = "0.1.4"

[profile]
[profile.dev]
debug = true
opt-level = 1
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

